# Copyright 2023 The SeamDB Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "seamdb"
version = "0.1.0"
edition = { workspace = true }
exclude = ["*.proto"]
license = "Apache-2.0"
homepage = "https://github.com/kezhuw/seamdb"
repository = "https://github.com/kezhuw/seamdb"
description = "A computation cluster to seam existing services to provide database interfaces"
documentation = "https://docs.rs/seamdb"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
async-trait = "0.1.72"
bytesize = "1.2.0"
compact_str = "0.7.1"
derivative = "2.2.0"
hashlink = "0.8.3"
rdkafka = "0.33.2"
tokio = {version = "1.30.0", features = ["full"]}
uriparse = "0.6.4"
tonic = { workspace = true }
prost = { workspace = true }
prost-derive = { workspace = true }
num_enum = "0.6.1"
hashbrown = "0.14.0"
smallvec = "1.11.0"
rand = "0.8.5"
etcd-client = { version = "0.11.1", features = ["pub-response-field"]  }
ignore-result = "0.2.0"
uuid = { version = "1.4.1", features = ["v4"] }
spin = "0.9.8"
tracing = "0.1.37"
static_assertions = "1.1.0"
scopeguard = "1.2.0"
arc-swap = "1.6.0"
either = "1.9.0"
atomic = "0.6.0"
bytemuck = { version = "1.13.1", features = ["derive"] }

[dev-dependencies]
assertor = "0.0.2"
serial_test = "2.0.0"
speculoos = "0.11.0"
test-case = "3.1.0"
testcontainers = "0.14.0"
tracing-test = "0.2.4"

[workspace]
members = ["src/protos/build"]

[workspace.package]
edition = "2021"

[workspace.dependencies]
prost = "0.11.9"
prost-build = "0.11.9"
prost-derive = "0.11.9"
tonic = "0.9.2"
tonic-build = "0.9.2"

[patch.crates-io]
prost = { git = "https://github.com/kezhuw/prost.git", branch = "custom"  }
prost-build = { git = "https://github.com/kezhuw/prost.git", branch = "custom"  }
prost-derive = { git = "https://github.com/kezhuw/prost.git", branch = "custom"  }
