# Copyright 2023 The SeamDB Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "seamdb"
version = "0.1.0"
edition = { workspace = true }
exclude = ["*.proto"]
license = "Apache-2.0"
homepage = "https://github.com/kezhuw/seamdb"
repository = "https://github.com/kezhuw/seamdb"
description = "A computation cluster to seam existing services to provide database interfaces"
documentation = "https://docs.rs/seamdb"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
async-trait = "0.1.81"
bytesize = "1.2.0"
compact_str = "0.7.1"
hashlink = "0.8.3"
rdkafka = "0.37.0"
tokio = {version = "1.45", features = ["full"]}
uriparse = "0.6.4"
tonic = { workspace = true }
prost = { workspace = true }
prost-derive = { workspace = true }
hashbrown = "0.14.0"
smallvec = "1.11.0"
rand = "0.8.5"
etcd-client = { version = "0.13", features = ["pub-response-field"]  }
ignore-result = "0.2.0"
uuid = { version = "1.4.1", features = ["v4"] }
spin = "0.9.8"
tracing = "0.1.37"
static_assertions = "1.1.0"
scopeguard = "1.2.0"
arc-swap = "1.6.0"
either = "1.15"
atomic = "0.6.0"
bytemuck = { version = "1.13.1", features = ["derive"] }
futures = "0.3.28"
thiserror = "1.0.48"
tokio-stream = "0.1.15"
datafusion = "47.0.0"
pgwire = "0.27.0"
derive-where = "1.2.7"
asyncs = { version = "0.3.0", features = ["tokio"] }
async-io = "2.3.4"
bytes = "1.7.2"
lazy_static = "1.5.0"
lazy-init = "0.5.1"
enum_dispatch = "0.3.13"
jiff = "0.1.15"
clap = { version = "4.5.23", features = ["derive"] }
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["tracing-log", "env-filter", "std"] }
async_cell = "0.2.2"
opendal = { version = "0.53.3", features = ["services-hdfs-native", "services-s3"] }
hex-simd = { version = "0.8.0", features = ["alloc"] }

[dev-dependencies]
assertor = "0.0.2"
asyncs = { version = "0.3.0", features = ["test", "tokio"] }
env_logger = "0.11.5"
serial_test = "2.0.0"
speculoos = "0.11.0"
test-case = "3.1.0"
test-log = "0.2.12"
testcontainers = "0.14.0"
tracing-test = "0.2.4"

[profile.dev]
lto = "thin"

[profile.release]
lto = "thin"

[workspace]
members = ["src/protos/build"]

[workspace.package]
edition = "2021"

[workspace.dependencies]
prost = "0.12.6"
prost-build = "0.12.6"
prost-derive = "0.12.6"
tonic = "0.11"
tonic-build = "0.11"

[patch.crates-io]
prost = { git = "https://github.com/kezhuw/prost.git", branch = "seamdb"  }
prost-build = { git = "https://github.com/kezhuw/prost.git", branch = "seamdb"  }
prost-derive = { git = "https://github.com/kezhuw/prost.git", branch = "seamdb"  }
